# mageflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: bandit.yml  ci.yml  codeql.yml  coverage.yml  pm.yml  publish.yml  release.yml  security.yml  semgrep.yml  tests.yml
docs/: index.md  roadmap.md  setup.md
docs/api/: chain.md  client.md  signature.md  swarm.md
docs/documentation/: callbacks.md  chain.md  chains.md  root-task.md  swarm.md  task-lifecycle.md
mageflow/: __init__.py  callbacks.py  client.py  errors.py  init.py  startup.py  typing_support.py  workflows.py
mageflow/chain/: consts.py  creator.py  messages.py  model.py  workflows.py
mageflow/invokers/: base.py  hatchet.py
mageflow/root/: __init__.py  consts.py  context.py  model.py
mageflow/signature/: consts.py  creator.py  model.py  resolve.py  status.py  types.py
mageflow/swarm/: consts.py  creator.py  messages.py  model.py  state.py  workflows.py
mageflow/task/: model.py
mageflow/utils/: mageflow.py  models.py  pythonic.py
mageflow/visualizer/: app.py  builder.py  data.py  utils.py
mageflow/visualizer/assets/: cytoscape_styles.py
orchestrator/: __init__.py  callbacks.py  client.py  errors.py  init.py  startup.py
orchestrator/chain/: consts.py  model.py  workflows.py
orchestrator/invokers/: base.py  hatchet.py
orchestrator/models/: message.py
orchestrator/signature/: consts.py  creator.py  model.py  status.py  types.py
orchestrator/swarm/: consts.py  creator.py  model.py  workflows.py
orchestrator/task/: model.py
orchestrator/utils/: models.py  pythonic.py
orchestrator/visualizer/: app.py  builder.py  data.py  utils.py
orchestrator/visualizer/assets/: styles.css
tests/integration/: conftest.py  test_redis_ttl.py
tests/integration/hatchet/: assertions.py  conftest.py  docker-compose.hatchet.yml  models.py  test_complex_scerios.py  test_task_models.py  worker.py
tests/integration/hatchet/chain/: test__chain.py  test_edge_cases.py  test_stop_resume.py
tests/integration/hatchet/root/: test__root.py
tests/integration/hatchet/signature/: test__signature.py  test_edge_case.py  test_stop_resume.py
tests/integration/hatchet/swarm/: test__swarm.py  test_edge_cases.py  test_stop_resume.py
tests/unit/: assertions.py  conftest.py  test_client.py  test_sign.py
tests/unit/chain/: test_chain.py  test_status_changes.py
tests/unit/complex/: test_chain_and_swarm.py
tests/unit/hatchet/: assertions.py  conftest.py  test_client.py
tests/unit/hatchet/chain/: test_chain.py  test_status_changes.py
tests/unit/hatchet/siganture/: test_signature.py  test_status_changes.py
tests/unit/hatchet/swarm/: test_config.py  test_status_changes.py  test_swarm.py
tests/unit/siganture/: test_signature.py  test_status_changes.py
tests/unit/swarm/: WORKFLOW_TEST_ANALYSIS.md  conftest.py  test_call_item.py  test_config.py  test_handle_finish_tasks.py  test_status_changes.py  test_swarm.py  test_swarm_item_done.py  test_swarm_item_failed.py  test_swarm_start_tasks.py  test_workflows.py
