[project]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "yedidyakfir",email = "yedidyakfir@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "rapyer (>=1.0.3,<2.0.0)",
    "dynaconf (>=3.2.12,<4.0.0)"
]

[project.optional-dependencies]
display = [
    "hatchet-sdk (>=1.21.1,<2.0.0)",
    "dash[async] (>=3.3.0,<4.0.0)",
    "dash-cytoscape (>=1.0.2,<2.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"
pytest-asyncio = "^1.2.0"
psutil = "^7.1.3"
requests = "^2.32.5"
fakeredis = {version = "^2.32.1", extras = ["json"]}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
