[project]
name = "mageflow"
version = "0.0.5"
description = "Manage Graph Execution Flow - A unified interface for task orchestration across different task managers"
authors = [
    {name = "imaginary-cherry", email = "yedidyakfir@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = [
    "task-orchestration",
    "workflow",
    "task-manager",
    "hatchet",
    "async",
    "redis",
    "task-chain",
    "task-swarm",
    "distributed",
    "microservices",
    "pipeline",
    "graph-execution",
    "workflow-engine",
    "task-queue",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "rapyer>=1.1.3,<1.2.0"
]

[project.optional-dependencies]
hatchet = [
    "hatchet-sdk (>=1.20.0,<1.22.0)"
]
display = [
    "dash[async] (>=3.3.0,<4.0.0)",
    "dash-cytoscape (>=1.0.2,<2.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)"
]

[project.urls]
Homepage = "https://imaginary-cherry.github.io/mageflow/"
Documentation = "https://imaginary-cherry.github.io/mageflow/"
Repository = "https://github.com/imaginary-cherry/mageflow"
"Source Code" = "https://github.com/imaginary-cherry/mageflow"
"Bug Tracker" = "https://github.com/imaginary-cherry/mageflow/issues"
"Changelog" = "https://github.com/imaginary-cherry/mageflow/releases"

[tool.poetry]
packages = [{include = "mageflow"}]

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"
pytest-asyncio = "^1.2.0"
psutil = "^7.1.3"
requests = "^2.32.5"
fakeredis = {version = "^2.32.1", extras = ["json"]}
dynaconf = ">=3.2.12,<4.0.0"
pytest = "^9.0.2"
pytest-split = "^0.9.0"
tox = "^4.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
display-tasks = "mageflow.visualizer.app:main"

[tool.coverage.run]
source = ["mageflow"]
concurrency = ["multiprocessing"]
parallel = true
omit = [
    "*/tests/*", 
    "*/test_*",
    "mageflow/visualizer/*"
]

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload"
]

[tool.coverage.html]
directory = "htmlcov"